2007-05-11  Csaba Henk <csaba.henk@creo.hu>

	* Fix return value of fuse_loop()/fuse_loop_mt().
	Error reported by Csaba Henk, fix by Miklos Szeredi.
 
2007-05-03  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.7.0-rc1

2007-05-02  Miklos Szeredi <miklos@szeredi.hu>

	* kernel: sync with mainline:

	* Use invalidate_mapping_pages() if available

	* Fix BUG when invalid file type is supplied in mount. Patch by
	Timo Savola

2007-04-27  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: call umount(8) directly instead of fusermount if
	possible

	* Clean up init script, make it LSB compliant

2007-04-26  Miklos Szeredi <miklos@szeredi.hu>

	* In multithreaded loop, use a semaphore instead of SIGHUP to wake
	up the main thread on umount.  This is more elegant, and works
	even if signals are blocked.

2007-04-25  Miklos Szeredi <miklos@szeredi.hu>

	* Improve mounting support in libfuse:
	 - check non-empty mountpoint
	 - only fall back to fusermount when necessary

2007-04-23  Miklos Szeredi <miklos@szeredi.hu>

	* Don't chdir to "/" in foreground mode, it causes more trouble
	than it's worth

2007-04-18  Miklos Szeredi <miklos@szeredi.hu>

	* Replace utils/mount.fuse "sh" script with a "C" program

2007-04-15  Miklos Szeredi <miklos@szeredi.hu>

	* Add -lulockmgr to compilation comment in fusexmp_fh.c

2007-04-05  Miklos Szeredi <miklos@szeredi.hu>

	* Check for iconv.  Patch by Csaba Henk

	* Add direct umounting

	* Use "fusectl" as the device for the fusectl filesystem.  Debian
	Bug#417945.  Reported by Laurent Bonnaud

2007-04-01  Csaba Henk <csaba.henk@creo.hu>

	* Fix some FreeBSD related macros.

2007-03-30  Miklos Szeredi <miklos@szeredi.hu>

	* Add support for direct mounting by libfuse.  Fall back on
	calling fusermount if it doesn't work

2007-03-14  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.7.0-pre1

2007-03-05  Miklos Szeredi <miklos@szeredi.hu>

	* Correctly handle O_APPEND in direct IO mode.  Reported by Greg
	Bruno
